--- a/web/application/admin/view/report/company.html
+++ b/web/application/admin/view/report/company.html
@@ -40,7 +40,7 @@
                         <div class="col-md-8">
                             <form class="form-inline ml-3" action="{:url()}"  method="get">
                                 <div class="form-group">
-                                    <label style="font-weight: normal;">注册时间：</label>
+                                    <label style="font-weight: normal;">提交时间：</label>
                                     <div class = "input-group" style="padding-right: 15px">
                                         <input type = "date"  name="start" class = "form-control"  value="{$start}" placeholder="开始日期">
                                         <span style="display: inline-block;vertical-align: middle;padding-top: 5px"><hr /></span>
@@ -48,7 +48,7 @@
                                     </div>&nbsp;
                                 </div>
                                 <div class="form-group">
-                                    <label style="font-weight: normal;">注册手机：</label>
+                                    <label style="font-weight: normal;">认证手机：</label>
                                     <div class="input-group" style="min-width: 280px;padding-right: 15px">
                                         <input class="form-control form-control-navbar"  name="k" type="search"  value="{$k}" placeholder="" aria-label="Search">
                                     </div>
@@ -70,11 +70,9 @@
                             <thead>
                             <tr>
                                 <th>序号</th>
-                                <th>注册手机</th>
-                                <th>注册用户名</th>
+                                <th>认证手机</th>
+                                <th>认证用户名</th>
                                 <th>企业名称</th>
-                                <th>认证类型</th>
-                                <th>注册时间</th>
                                 <th>法人代表</th>
                                 <th>联系人</th>
                                 <th>联系电话</th>
@@ -90,21 +88,15 @@
                                 <td>{$company.phone}</td>
                                 <td>{$company.username}</td>
                                 <td>{$company.company_name}</td>
-                                <td>{$company.reg_role}</td>
-                                <td>
-                                    {if $company.reg_time gt 0}
-                                    {:date('Y-m-d',$company.reg_time)}
-                                    {/if}
-                                </td>
                                 <td>{$company.legal_representative}</td>
                                 <td>{$company.contact}</td>
-                                <td>{$company.ent_phone}</td>
+                                <td>{$company.telephone}</td>
                                 <td>
-                                    {if $company.edit_time gt 0}
-                                    {:date('Y-m-d',$company.edit_time)}
+                                    {if $company.last_modified_time gt 0}
+                                    {:date('Y-m-d',$company.last_modified_time)}
                                     {/if}
                                 </td>
-                                <td>{:getCertificationStatus($company.status)} </td>
+                                <td>{:getCertificationStatusNew($company.state)} </td>
                                 <td>
                                     {if $company.audit_time gt 0}
                                     {:date('Y-m-d',$company.audit_time)}
