修改认证表字段变更问题

--- a/web/application/admin/view/company_certification/view.html
+++ b/web/application/admin/view/company_certification/view.html
@@ -73,10 +73,10 @@
                                 <span class="">{$row.description}</span>
                             </div>
                             {/if}
-                            {if $row.opening_permit_uri}
+                            {if $row.tax_registration_uri}
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3">开户许可证</label>
-                                <a href="{$row.opening_permit_uri}" target="_blank" ><img src="{$row.opening_permit_uri}"  width="150px" height="150px" /></a>
+                                <label for="" class="col-md-3">税务登记许可</label>
+                                <a href="{$row.opening_permit_uri}" target="_blank" ><img src="{$row.tax_registration_uri}"  width="150px" height="150px" /></a>
                             </div>
                             {/if}
                             {if $row.business_licence_uri}
@@ -85,10 +85,10 @@
                                 <a href="{$row.business_licence_uri}" target="_blank" ><img src="{$row.business_licence_uri}"  width="150px" height="150px" /></a>
                             </div>
                             {/if}
-                            {if $row.legal_repres_id_card_uri}
+                            {if $row.organization_code_uri}
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3">法人身份证</label>
-                                <a href="{$row.legal_repres_id_card_uri}" target="_blank" ><img src="{$row.legal_repres_id_card_uri}"  width="150px" height="150px" /></a>
+                                <label for="" class="col-md-3">组织机构代码许可</label>
+                                <a href="{$row.legal_repres_id_card_uri}" target="_blank" ><img src="{$row.organization_code_uri}"  width="150px" height="150px" /></a>
                             </div>
                             {/if}
                             {if $row.power_attorney_uri}
