修改后台业务逻辑

--- a/web/application/admin/view/company_certification/view.html
+++ b/web/application/admin/view/company_certification/view.html
@@ -76,7 +76,7 @@
                             {if $row.tax_registration_uri}
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">税务登记许可</label>
-                                <a href="{$row.opening_permit_uri}" target="_blank" ><img src="{$row.tax_registration_uri}"  width="150px" height="150px" /></a>
+                                <a href="{$row.tax_registration_uri}" target="_blank" ><img src="{$row.tax_registration_uri}"  width="150px" height="150px" /></a>
                             </div>
                             {/if}
                             {if $row.business_licence_uri}
@@ -88,7 +88,7 @@
                             {if $row.organization_code_uri}
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">组织机构代码许可</label>
-                                <a href="{$row.legal_repres_id_card_uri}" target="_blank" ><img src="{$row.organization_code_uri}"  width="150px" height="150px" /></a>
+                                <a href="{$row.organization_code_uri}" target="_blank" ><img src="{$row.organization_code_uri}"  width="150px" height="150px" /></a>
                             </div>
                             {/if}
                             {if $row.power_attorney_uri}
