后台商品列表及添加修改涉及供应商相关修改

--- a/web/application/admin/view/product/create.html
+++ b/web/application/admin/view/product/create.html
@@ -36,7 +36,7 @@
                                         <div class="row">
                                           <select class="form-control col-md-6 select2" name="supplier_id">
                                                 {volist name=":getSupplierList()"  id='user'}
-                                                <option  value="{$user.id}">{$user.real_name}</option>
+                                                <option  value="{$user.id}">{$user.company_name}</option>
                                                 {/volist}
                                           </select>
                                         </div>
