--- a/web/application/admin/view/product/list_pending.html
+++ b/web/application/admin/view/product/list_pending.html
@@ -30,7 +30,7 @@
                                     <select class="form-control" name="supplier_id"  placeholder="供应商">
                                         <option value="0" {if $supplier_id eq 0}selected{/if}>全部供应商</option>
                                         {volist name=":getSupplierList()"  id='user'}
-                                        <option  {if $supplier_id eq $user.id}selected{/if} value="{$user.id}">{$user.real_name}</option>
+                                        <option  {if $supplier_id eq $user.id}selected{/if} value="{$user.id}">{$user.company_name}</option>
                                         {/volist}
                                     </select>
                                 </div>&nbsp;&nbsp;
