修改企业邀请验证

--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -40,9 +40,9 @@
                     'managerIcon'=> 'fa-cart-arrow-down',
                     'managerVal' => [['name'=>'管理订单','url'=>url('admin/order/index'),'icon'=>'fa-database']] 
                 ],[
-                    'managerKey' => '企业认证',
-                    'managerIcon'=> 'fa-users',
-                    'managerUrl' => url('admin/certification/index'),
+                    'managerKey' => '企业管理',
+                    'managerIcon'=> 'fa-university',
+                    'managerUrl' => url('admin/companyInfo/index'),
                     'managerVal' => []
                 ],[
                   'managerKey' => '企业认证',
@@ -104,7 +104,6 @@
                     'managerUrl' => 'javascript:;',
                     'managerIcon'=> 'fa-group',
                     'managerVal' => [ ['name'=>'管理会员','url'=>url('admin/member/index'),'icon'=>'fa-group'],
-                                      ['name'=>'企业管理','url'=>url('admin/companyInfo/index'),'icon'=>'fa-university']
                                     ]
                 ]
             ]
