--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -76,8 +76,8 @@
                    'managerIcon'=> 'fa-bar-chart',
                    'managerUrl' => '#',
                    'managerVal' => [   ['name'=>'商品交易报表','url'=>url('admin/report/trade'),'icon'=>'fa-database'],
-                                       ['name'=>'供应商交易报表','url'=>url('admin/report/supplier'),'icon'=>'fa-cubes'],
-                                       ['name'=>'采购商交易报表','url'=>url('admin/report/buyer'),'icon'=>'fa-shopping-cart'],
+                                       ['name'=>'卖家交易报表','url'=>url('admin/report/supplier'),'icon'=>'fa-cubes'],
+                                       ['name'=>'买家交易报表','url'=>url('admin/report/buyer'),'icon'=>'fa-shopping-cart'],
                                        ['name'=>'订单数据报表','url'=>url('admin/report/order'),'icon'=>'fa-reorder'],
                                        ['name'=>'企业注册认证数据','url'=>url('admin/report/company'),'icon'=>'fa-check']
                                    ]
