--- a/web/application/admin/view/product/edit.html
+++ b/web/application/admin/view/product/edit.html
@@ -31,7 +31,7 @@
                         <form id="add-form" role="form" action="{:url('')}" method="post"  ><!-- onsubmit="return validateSubmit()" -->
                             <div class="card-body">
                                 <div class="form-inline form-group">
-                                    <label  class="col-md-2">*选择供应商</label>
+                                    <label  class="col-md-2">*选择商家</label>
                                     <div class="col-md-5 no-padding">
                                         <div class="row">
                                           <select class="form-control col-md-6 select2" name="supplier_id">
