--- a/web/application/admin/view/product/view.html
+++ b/web/application/admin/view/product/view.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="card-body">
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-2">供应商</label>
+                                <label for="" class="col-md-2">商家</label>
                                 <span class="">{$product.supplier_name}</span>
                             </div>
                             <div class="form-inline form-group">
