--- a/web/application/admin/view/report/buyer.html
+++ b/web/application/admin/view/report/buyer.html
@@ -1,4 +1,4 @@
-{include file="layout/header" title="采购商交易报表" keywords="" /}
+{include file="layout/header" title="买家交易报表" keywords="" /}
 
 {include file="layout/left" groupId="$groupId" keywords="" /}
 <style type="text/css">
@@ -23,7 +23,7 @@
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">采购商交易报表</li>
+                        <li class="breadcrumb-item active">买家交易报表</li>
                     </ol>
                 </div><!-- /.col -->
             </div><!-- /.row -->
@@ -34,7 +34,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">采购商交易报表</h3>
+                        <h3 class="card-title">买家交易报表</h3>
                     </div>
                     <div class="row" style="padding-top: 15px;padding-right: 15px">
                         <div class="col-md-9">
@@ -48,7 +48,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label style="font-weight: normal;">采购商：</label>
+                                    <label style="font-weight: normal;">商家：</label>
                                     <div class="input-group" style="padding-right: 15px">
                                         <input class="form-control form-control-navbar"  name="k" type="search"  value="{$k}" placeholder="" aria-label="Search">
                                     </div>
@@ -71,7 +71,7 @@
                             <tr>
                                 <th width="150px">序号</th>
                                 <th width="150px">日期</th>
-                                <th>采购商名称</th>
+                                <th>商家名称</th>
                                 <th>交易订单数</th>
                                 <th>交易金额(¥)</th>
                             </tr>
