--- a/web/application/admin/view/product/create.html
+++ b/web/application/admin/view/product/create.html
@@ -527,7 +527,7 @@
 
 <!--模板app1-->
 <div class="template-app-html" style="display: none">
-    <div  style="width: 450px;margin:15px auto;padding:0 auto">
+    <div  style="width: 100%;margin:15px auto;padding:0 auto">
         <fieldset style="border:1px solid #2475E2;border-radius:10px;margin-bottom:10px;">
             <legend style="left:33%;height:30px;font-size:30px;font-weight:400;color:rgba(36,117,226,1);line-height:24px;text-align:center;">视频介绍</legend>
             <div class="content" style="width:100%;font-size:14px;font-family:MicrosoftYaHei;font-weight:400;color:rgba(102,102,102,1);line-height:24px;text-align:left;">
@@ -575,7 +575,7 @@
 
 <!--模板app2-->
 <div class="template-app-html" style="display: none">
-    <div  style="width: 450px;margin:15px auto;padding:0 auto">
+    <div  style="width: 100%;margin:15px auto;padding:0 auto">
         <!-- 一级标题 -->
         <div style="width:100%;height:auto;padding-bottom:15px;padding:20px; 0px">
             <img  style="max-width:94%;" src="__STATIC__/img/product_detail_default-01.jpg" alt="" />
@@ -652,7 +652,7 @@
 
 <!--模板app3-->
 <div class="template-app-html" style="display: none">
-    <div  style="width: 450px;margin:15px auto;padding:0 auto">
+    <div  style="width: 100%;margin:15px auto;padding:0 auto">
         <!-- 一级标题 -->
         <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
             <div style="min-width: 200px; display:table-cell;height:44px;line-height:44px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
