后台列表用户头像，商品添加bug

--- a/web/application/admin/view/product/create.html
+++ b/web/application/admin/view/product/create.html
@@ -173,7 +173,7 @@
                                     <label class="col-md-2">使用Web模板</label>
                                     <div class="col-md-7 no-padding">
                                         <div class="row">
-                                            <button class="btn btn-primary"  data-toggle="modal" data-type="1" data-target="#template-modal">使用模板</button>
+                                            <input type="button" class="btn btn-primary"  data-toggle="modal" data-type="1" data-target="#template-modal" value="使用模板" />
                                         </div>
                                     </div>
                                 </div>
@@ -189,7 +189,7 @@
                                     <label class="col-md-2">使用移动端模板</label>
                                     <div class="col-md-7 no-padding">
                                         <div class="row">
-                                            <button class="btn btn-primary" data-toggle="modal"  data-type="2" data-target="#template-modal">使用模板</button>
+                                            <input type="button" class="btn btn-primary" data-toggle="modal"  data-type="2" data-target="#template-modal" value="使用模板" />
                                         </div>
                                     </div>
                                 </div>
