--- a/web/application/admin/view/product/create.html
+++ b/web/application/admin/view/product/create.html
@@ -173,7 +173,7 @@
                                     <label class="col-md-2">使用Web模板</label>
                                     <div class="col-md-7 no-padding">
                                         <div class="row">
-                                            <input type="button" class="btn btn-primary"  data-toggle="modal" data-type="1" data-target="#template-modal" value="使用模板" />
+                                            <button type="button" class="btn btn-primary"  data-toggle="modal" data-type="1" data-target="#template-modal">使用模板</button>
                                         </div>
                                     </div>
                                 </div>
@@ -189,7 +189,7 @@
                                     <label class="col-md-2">使用移动端模板</label>
                                     <div class="col-md-7 no-padding">
                                         <div class="row">
-                                            <input type="button" class="btn btn-primary" data-toggle="modal"  data-type="2" data-target="#template-modal" value="使用模板" />
+                                            <button type="button" class="btn btn-primary" data-toggle="modal"  data-type="2" data-target="#template-modal">使用模板</button>
                                         </div>
                                     </div>
                                 </div>
@@ -527,14 +527,14 @@
 
 <!--模板app1-->
 <div class="template-app-html" style="display: none">
-    <div  style="width: 100%;margin:15px auto;padding:0 auto">
+    <div  style="width: 450px;margin:15px auto;padding:0 auto">
         <fieldset style="border:1px solid #2475E2;border-radius:10px;margin-bottom:10px;">
             <legend style="left:33%;height:30px;font-size:30px;font-weight:400;color:rgba(36,117,226,1);line-height:24px;text-align:center;">视频介绍</legend>
             <div class="content" style="width:100%;font-size:14px;font-family:MicrosoftYaHei;font-weight:400;color:rgba(102,102,102,1);line-height:24px;text-align:left;">
                 文案介绍文案介绍文案介绍文案介绍文案介绍文案介绍文案介绍文案介绍文案介绍文案介绍
             </div>
             <br />
-            <div style="height:auto;margin:15px auto;text-align: center">
+            <div class="imgs" style="height:auto;margin:15px auto;">
                 <embed src="" type="video/x-ms-asf-plugin" width="100%" height="400" autostart="false" loop="true" style="margin:0 auto;" />
             </div>
         </fieldset>
@@ -575,15 +575,15 @@
 
 <!--模板app2-->
 <div class="template-app-html" style="display: none">
-    <div  style="width: 100%;margin:15px auto;padding:0 auto">
+    <div  style="width: 450px;margin:15px auto;padding:0 auto">
         <!-- 一级标题 -->
         <div style="width:100%;height:auto;padding-bottom:15px;padding:20px; 0px">
             <img  style="max-width:94%;" src="__STATIC__/img/product_detail_default-01.jpg" alt="" />
         </div>
 
         <div style="text-align:center;background-color:#5B96E3;padding:10px 0px;margin-bottom:10px;">
-            <h5 style="color:#ffffff;">商品信息</h5>
-            <p style="color:#ffffff;font-size: 20px">PRODUCT INFORMATION</p>
+            <h3 style="color:#ffffff;line-height:15px;">商品信息</h3>
+            <p style="color:#ffffff;line-height:15px;">PRODUCT INFORMATION</p>
         </div>
 
         <!-- 参数表图片 -->
@@ -633,8 +633,8 @@
         </div>
 
         <div style="text-align:center;background-color:#5B96E3;padding:10px 0px;margin-bottom:10px;">
-            <h5 style="color:#ffffff;">商品实拍</h5>
-            <p style="color:#ffffff;font-size: 20px;">PRODUCT PHOTOGRAPHY</p>
+            <h3 style="color:#ffffff;line-height:15px;">商品实拍</h3>
+            <p style="color:#ffffff;line-height:15px;">PRODUCT PHOTOGRAPHY</p>
         </div>
         <!-- 商品实拍 -->
         <div  style=" margin: 15px auto;text-align:center">
@@ -652,7 +652,7 @@
 
 <!--模板app3-->
 <div class="template-app-html" style="display: none">
-    <div  style="width: 100%;margin:15px auto;padding:0 auto">
+    <div  style="width: 450px;margin:15px auto;padding:0 auto">
         <!-- 一级标题 -->
         <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
             <div style="min-width: 200px; display:table-cell;height:44px;line-height:44px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
