--- a/web/application/admin/view/product/create.html
+++ b/web/application/admin/view/product/create.html
@@ -534,7 +534,7 @@
                 文案介绍文案介绍文案介绍文案介绍文案介绍文案介绍文案介绍文案介绍文案介绍文案介绍
             </div>
             <br />
-            <div class="imgs" style="height:auto;margin:15px auto;">
+            <div style="height:auto;margin:15px auto;text-align: center">
                 <embed src="" type="video/x-ms-asf-plugin" width="100%" height="400" autostart="false" loop="true" style="margin:0 auto;" />
             </div>
         </fieldset>
@@ -582,8 +582,8 @@
         </div>
 
         <div style="text-align:center;background-color:#5B96E3;padding:10px 0px;margin-bottom:10px;">
-            <h3 style="color:#ffffff;line-height:15px;">商品信息</h3>
-            <p style="color:#ffffff;line-height:15px;">PRODUCT INFORMATION</p>
+            <h3 style="color:#ffffff;">商品信息</h3>
+            <p style="color:#ffffff;font-size: 20px;">PRODUCT INFORMATION</p>
         </div>
 
         <!-- 参数表图片 -->
@@ -633,8 +633,8 @@
         </div>
 
         <div style="text-align:center;background-color:#5B96E3;padding:10px 0px;margin-bottom:10px;">
-            <h3 style="color:#ffffff;line-height:15px;">商品实拍</h3>
-            <p style="color:#ffffff;line-height:15px;">PRODUCT PHOTOGRAPHY</p>
+            <h3 style="color:#ffffff;">商品实拍</h3>
+            <p style="color:#ffffff;font-size: 20 px;">PRODUCT PHOTOGRAPHY</p>
         </div>
         <!-- 商品实拍 -->
         <div  style=" margin: 15px auto;text-align:center">
