'修改模板样式'

--- a/web/application/admin/view/product/create.html
+++ b/web/application/admin/view/product/create.html
@@ -575,15 +575,15 @@
 
 <!--模板app2-->
 <div class="template-app-html" style="display: none">
-    <div  style="width: 450px;margin:15px auto;padding:0 auto">
+    <div  style="width: 100%;margin:15px auto;padding:0 auto">
         <!-- 一级标题 -->
         <div style="width:100%;height:auto;padding-bottom:15px;padding:20px; 0px">
             <img  style="max-width:94%;" src="__STATIC__/img/product_detail_default-01.jpg" alt="" />
         </div>
 
         <div style="text-align:center;background-color:#5B96E3;padding:10px 0px;margin-bottom:10px;">
-            <h3 style="color:#ffffff;">商品信息</h3>
-            <p style="color:#ffffff;font-size: 20px;">PRODUCT INFORMATION</p>
+            <h5 style="color:#ffffff;">商品信息</h5>
+            <p style="color:#ffffff;font-size: 20px">PRODUCT INFORMATION</p>
         </div>
 
         <!-- 参数表图片 -->
@@ -633,8 +633,8 @@
         </div>
 
         <div style="text-align:center;background-color:#5B96E3;padding:10px 0px;margin-bottom:10px;">
-            <h3 style="color:#ffffff;">商品实拍</h3>
-            <p style="color:#ffffff;font-size: 20 px;">PRODUCT PHOTOGRAPHY</p>
+            <h5 style="color:#ffffff;">商品实拍</h5>
+            <p style="color:#ffffff;font-size: 20px;">PRODUCT PHOTOGRAPHY</p>
         </div>
         <!-- 商品实拍 -->
         <div  style=" margin: 15px auto;text-align:center">
@@ -652,7 +652,7 @@
 
 <!--模板app3-->
 <div class="template-app-html" style="display: none">
-    <div  style="width: 450px;margin:15px auto;padding:0 auto">
+    <div  style="width: 100%;margin:15px auto;padding:0 auto">
         <!-- 一级标题 -->
         <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
             <div style="min-width: 200px; display:table-cell;height:44px;line-height:44px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
