--- a/web/application/admin/view/company_certification/index.html
+++ b/web/application/admin/view/company_certification/index.html
@@ -198,7 +198,7 @@
                     dataType: 'json',
                     success: function (data) {
                         if (data.status == 0) {
-                          //  window.location.reload();
+                            window.location.reload();
                         } else {
                             alert(data.msg);
                         }
